--- a/redirect.html
+++ b/redirect.html
@@ -3,4 +3,6 @@
 		<script src='./assets/js/jquery-2.1.3.min.js'></script>
 		<script src='redirect.js'></script>
 	</head>
+	<body style='margin: 0px; overflow: hidden;'>
+	</body>
 <html>
